Got a very minimal version working
It does NOT include any HUD, and the Warping/CH part got removed since it relied too much on the old minecraft code, so it can be restarted fresh