@@ -2,7 +2,6 @@ package com.github.indigopolecat.bingobrewers.util;
 
 import com.github.indigopolecat.bingobrewers.BingoBrewers;
 import com.github.indigopolecat.bingobrewers.BingoBrewersConfig;
-import com.github.indigopolecat.bingobrewers.Hud.TitleHud;
 import com.github.indigopolecat.bingobrewers.gui.UpdateScreen;
 import com.google.gson.Gson;
 import com.google.gson.JsonObject;
@@ -13,22 +12,19 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.network.chat.Component;
 
 import javax.net.ssl.HttpsURLConnection;
-import javax.net.ssl.KeyManagerFactory;
-import javax.net.ssl.SSLContext;
-import javax.net.ssl.TrustManagerFactory;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.security.*;
-import java.security.cert.CertificateException;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executors;
 
+//TODO: there seems to be some duplicated code
 public class AutoUpdater {
-   public AutoUpdater() {  }
-   
     public static boolean updateScreen = false;
 
     private final UpdateContext context = new UpdateContext(
@@ -41,9 +37,11 @@ public class AutoUpdater {
     public CompletableFuture<Boolean> checkUpdate() {
         return CompletableFuture.supplyAsync(() -> {
             try {
-                String updaterType = "none";
-                if(BingoBrewersConfig.autoUpdaterType == 0) updaterType = "full";
-                if(BingoBrewersConfig.autoUpdaterType == 1) updaterType = "pre";
+                String updaterType = switch(BingoBrewersConfig.getConfig().autoUpdaterType) {
+                    case BETA -> "pre";
+                    case STABLE -> "full";
+                    default -> "none";
+                };
                 PotentialUpdate potentialUpdate = context.checkUpdate(updaterType).join();
                 Thread.sleep(1000);
                 return potentialUpdate.isUpdateAvailable();
@@ -54,9 +52,11 @@ public class AutoUpdater {
     }
 
     public CompletableFuture<Boolean> update() {
-        String updaterType = "none";
-        if(BingoBrewersConfig.autoUpdaterType == 0) updaterType = "full";
-        if(BingoBrewersConfig.autoUpdaterType == 1) updaterType = "pre";
+        String updaterType = switch(BingoBrewersConfig.getConfig().autoUpdaterType) {
+            case BETA -> "pre";
+            case STABLE -> "full";
+            default -> "none";
+        };
         return context.checkUpdate(updaterType).thenComposeAsync(potentialUpdate -> {
             if(potentialUpdate.isUpdateAvailable()) {
                 return potentialUpdate.launchUpdate().thenApply((ignored) -> {
@@ -79,7 +79,7 @@ public class AutoUpdater {
           
           UpdateUtils.patchConnection(connection -> {
              if (connection instanceof HttpsURLConnection https) {
-                https.setSSLSocketFactory(ctx.getSocketFactory());
+                //https.setSSLSocketFactory(ctx.getSocketFactory()); //TODO (matita): removed keystore for now
              }
           });
           
@@ -87,9 +87,9 @@ public class AutoUpdater {
           checkUpdate().thenAccept(updateAvailable -> {
              if (!updateAvailable) return;
              
-             if (BingoBrewersConfig.autoDownload) {
+             if (BingoBrewersConfig.getConfig().autoDownload) {
                 BingoBrewers.autoUpdater.update();
-                BingoBrewers.activeTitle = new TitleHud("Bingo Brewers will update on game close.", 0x47EB62, 4000,false);
+                //BingoBrewers.activeTitle = new TitleHud("Bingo Brewers will update on game close.", 0x47EB62, 4000,false); //TODO(matita): redo this
              } else {
                 isThereUpdate = true;
                 updateScreen = true;
@@ -106,16 +106,16 @@ public class AutoUpdater {
              
              UpdateUtils.patchConnection(connection->{
                 if(connection instanceof HttpsURLConnection) {
-                   ((HttpsURLConnection)connection).setSSLSocketFactory(ctx.getSocketFactory());
+                   //((HttpsURLConnection)connection).setSSLSocketFactory(ctx.getSocketFactory()); //TODO (matita): removed keystore for now
                 }
              });
              
              System.out.println("Checking for updates...");
              checkUpdate().thenAccept(updateAvailable->{
                 if(updateAvailable) {
-                   if(BingoBrewersConfig.autoDownload) {
+                   if(BingoBrewersConfig.getConfig().autoDownload) {
                       BingoBrewers.autoUpdater.update();
-                      BingoBrewers.activeTitle = new TitleHud("Bingo Brewers will update on game close.", 0x47EB62, 4000, false);
+                      //BingoBrewers.activeTitle = new TitleHud("Bingo Brewers will update on game close.", 0x47EB62, 4000, false); //TODO(matita): redo this
                    } else {
                       isThereUpdate = true;
                       updateScreen = true;
@@ -128,7 +128,7 @@ public class AutoUpdater {
 
     public String getChangelog() {
         try {
-            URL url = new URL("https://api.github.com/repos/IndigoPolecat/BingoBrewers/releases/latest");
+            URL url = (new URI("https://api.github.com/repos/IndigoPolecat/BingoBrewers/releases/latest")).toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             if(conn.getResponseCode() == HttpURLConnection.HTTP_OK) {
@@ -145,45 +145,9 @@ public class AutoUpdater {
 
                 return gson.fromJson(response.toString(), JsonObject.class).get("body").getAsString();
             }
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
         return "Could not fetch changelog";
-    }
-
-    public static SSLContext ctx;
-
-    static {
-
-        try {
-
-            KeyStore myKeyStore = KeyStore.getInstance("JKS");
-
-            myKeyStore.load(AutoUpdater.class.getResourceAsStream("/bbkeystore.jks"), "changeit".toCharArray());
-
-            KeyManagerFactory kmf = KeyManagerFactory.getInstance(KeyManagerFactory.getDefaultAlgorithm());
-
-            TrustManagerFactory tmf = TrustManagerFactory.getInstance(TrustManagerFactory.getDefaultAlgorithm());
-
-            kmf.init(myKeyStore, null);
-
-            tmf.init(myKeyStore);
-
-            ctx = SSLContext.getInstance("TLS");
-
-            ctx.init(kmf.getKeyManagers(), tmf.getTrustManagers(), null);
-
-        } catch (KeyStoreException | NoSuchAlgorithmException | KeyManagementException | UnrecoverableKeyException |
-
-                 IOException | CertificateException e) {
-
-            System.out.println("Failed to load keystore. A lot of API requests won't work");
-
-            e.printStackTrace();
-
-            ctx = null;
-
-        }
-
     }
 }
